--- a/communityboard/community_calendar/static/community_calendar/css/style.css
+++ b/communityboard/community_calendar/static/community_calendar/css/style.css
@@ -5,6 +5,7 @@ table{
 }
 
 td {
+  vertical-align: top;
   width: 14%;
   text-align: center;
   padding: 10px;
@@ -14,4 +15,19 @@ td {
 td.inactive {
   background-color: #FEF8CA;
   color: gray;
+}
+
+.title {
+  height: 25px
+}
+
+.event {
+  text-align: left;
+  font-size: .8em;
+  padding: 5px;
+  background-color: #CEC89A;
+}
+
+.highlight {
+  background-color: #FEF8FA;
 }
