--- a/communityboard/tasklist/templates/tasklist/index.html
+++ b/communityboard/tasklist/templates/tasklist/index.html
@@ -4,47 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="{% static 'tasklist/css/style.css' %}">
 </head>
 <body>
 
 
 <form action="">
-    {% csrf_token %}
     {% for t in tasks %}
-        <input class="check" type="checkbox" name="{% url 'tasklist:check' %}" value="{{ t.pk }}"> {{ t.name }}<br>
+        <div  class ="{% if t.completed %}checked{% endif %}">
+            <input class="check" type="checkbox" value="{{ t.pk }}"
+                    {% if t.completed %} checked{% endif %}> {{ t.name }}<br />
+        </div>
     {% endfor %}
 </form>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script>function getCookie(name) {
-    var cookieValue = null;
-    if (document.cookie && document.cookie !== '') {
-        var cookies = document.cookie.split(';');
-        for (var i = 0; i < cookies.length; i++) {
-            var cookie = jQuery.trim(cookies[i]);
-            // Does this cookie string begin with the name we want?
-            if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                break;
-            }
-        }
-    }
-    return cookieValue;
-}
-var csrftoken = getCookie('csrftoken');
-
-function csrfSafeMethod(method) {
-    // these HTTP methods do not require CSRF protection
-    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-}
-$.ajaxSetup({
-    beforeSend: function (xhr, settings) {
-        if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-            xhr.setRequestHeader("X-CSRFToken", csrftoken);
-        }
-    }
-});
-</script>
 <script src="{% static 'tasklist/js/script.js' %}"></script>
 </body>
 </html>
